# drone-cpp

./: CMakeLists.txt  README.md  base_station_server.cpp  config.conf  design.md  offset.cpp  transmit.cpp
cpp/: .gitignore  CMakeLists.txt  README.md  design.md  test.cpp
cpp/include/: communication.hpp  utils.hpp
cpp/server/: CMakeLists.txt  req.md
cpp/src/: drone_client.cpp
include/: communication.hpp  utils.hpp
inlcude/: utils.hpp
python/: README.md  deliver.py  design.md  main.py  pyproject.toml  requirements.txt  scout.py  task.md
python/src/: communication.py  config.py  detection.py  drone_controller.py  offset.py  shared.py
server/: base_station_server.cpp  config.conf
src/: communication.cpp  drone_client.cpp  offset.cpp  storage.cpp  transmit.cpp
